# edu-flow

./: .env.example  .gitignore  Dockerfile  EduFlow_Pitch_Deck_v2.pptx  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2756dbf301c1_add_notifications_table.py  4135dc685f0c_add_server_default_to_module_content_md.py  45bdf764ff5f_initial.py  45c8a7aaaece_score_columns_float.py  49c487a4e7d0_tz_v3_org_topic_live_badge.py  689badf651d4_add_class_code_expires_at.py  7221c4700d5e_phase5_live_sessions_tables.py  7b723d8a7388_added_orgs_and_parents_updated_related_.py  81042f403d56_student_parent_and_class_students.py  a40869e20805_add_ai_logs_table.py  b3e4e795107c_course_enrollment_student_id_nullable.py  b56d1c96980c_remove_subject_from_classes.py  c1d2e3f4a5b6_add_username_system_password_to_users.py  c20c2a8f49a0_merge_dual_heads.py  d3e5f7a9b1c2_seed_default_subjects.py  f2c4d44bae8c_add_username_system_password_to_users.py  f35d9aa80269_add_org_invitations_table.py
backend/: celery_app.py  main.py
backend/api/: deps.py
backend/core/: config.py  security.py
backend/db/: base.py  session.py
backend/repositories/: __init__.py  ai_log_repo.py  assignment_repo.py  class_repo.py  course_repo.py  dashboard_repo.py  invitation_repo.py  org_repo.py  parent_repo.py  refresh_session_repo.py  user_repo.py
backend/schemas/: ai.py  assignment.py  auth.py  (+8 more)
docs/: EduFlow_TZ_v2.docx  EduFlow_TZ_v3.docx
frontend/: package-lock.json  package.json  tailwind.config.ts
scripts/: local_network.py  make_help.py
(+111 files in other folders)
